--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -72,6 +72,12 @@ img {
     border-bottom: 1px solid yellowgreen;
 }
 
+@media screen and (max-width: 1010px) {
+    header {
+        height: auto;
+    }
+}
+
 @media screen and (max-width: 480px) {
     header {
         font-size: 1.5rem;
