--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -72,9 +72,9 @@ img {
     border-bottom: 1px solid yellowgreen;
 }
 
-@media screen and (max-width: 1010px) {
-    header {
-        height: 10rem;
+@media screen and (max-width: 1175px) {
+    header, nav {
+        height: 10rem !important;
     }
 }
 
