--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -74,6 +74,7 @@ img {
 
 @media screen and (max-width: 1175px) {
     header, nav {
+        width: 100%;
         height: 10rem !important;
     }
 }
