--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -26,7 +26,7 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 2rem;
+    height: 2rem !important;
 }
 
 ul {
