--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -26,7 +26,8 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 2rem !important;
+    height: 4rem !important;
+    font-size: 18px;
 }
 
 ul {
