Social container correct

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -121,6 +121,12 @@ img {
 }
 
 @media screen and (max-width: 1180px) {
+
+
+    .sidebar {
+        display: none;
+    }
+
     header, nav {
         width: 100%;
     }
