--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -26,8 +28,19 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 4rem !important;
-    font-size: 18px;
+    height: auto;
+    font-size: 24px;
+    border: 1.5px solid brown;
+    border-radius: 16px;
+    width: 280px;
+    align-self: center;
+    cursor: pointer;
+}
+
+.social-container:hover {
+    color: darkolivegreen;
+    background-color: darkseagreen;
+    color: brown;
 }
 
 ul {
@@ -64,7 +77,8 @@ h1 {
     font-size: 42px;
     font-weight: 600;
     margin-right: 50px;
-    margin-left: 50px
+    margin-left: 50px;
+
 }
 
 h3 {
@@ -176,6 +190,10 @@ img {
 
     header {
         padding-left: 0;
+    }
+
+    h1 {
+        margin: 0;
     }
 
     .header-title {
